--- a/_config.yml
+++ b/_config.yml
@@ -25,16 +25,16 @@ author:
   name             : "Jinhao Zheng"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Santa Barbara, CA"
+  location         : "Hefei, Anhui, China"
   employer         : "University of Science and Technology of China"
   uri              : # URL
   email            : "jinhaozheng2004@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=7Jah2XQAAAAJ"
   impactstory      : # URL
-  orcid            : #"http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0009-0004-6532-0248"
   semantic         : # URL
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
