--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ main:
   - title: "Publications"
     url: /#-pubs
 
-  #- title: "Talks"
-  #  url: /talks/    
+  - title: "Honors&Scholarships"
+    url: /#-honors   
 
   - title: "Teaching"
     url: /#-teach
